--- a/book/_config.yml
+++ b/book/_config.yml
@@ -1,16 +1,16 @@
-title: TeachBooks template                           # Replace this with your own book title
-author: TeachBooks Team, built with <a href="https://teachbooks.io">TeachBooks</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a>
+title: Getting Started With eWaterCycle                          # Replace this with your own book title
+author: Mark Melotto, Rolf Hut & the eWaterCycle team, built with <a href="https://teachbooks.io">TeachBooks</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="license noopener noreferrer"">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt=""></a>
                                                      # Replace TeachBooks Teams with your own name in the line above
 
 execute:
-  execute_notebooks: "off"                           # Replace this if you want don't have notebooks with output and you want to add notebook output during build
+  execute_notebooks: "on"                           # Replace this if you want don't have notebooks with output and you want to add notebook output during build
 
 only_build_toc_files: true                           # Replace this with false if you want to build all files in the book, allowing you to refer to pages which are not included in the table of contents
 
 
 html:
-  favicon : "figures/TB_favicon.ico"                 # Replace this with your own favicon
-  baseurl :  "https://<user/org>.io/<repo>"          # Replace this with your own URL
+  favicon : "figures/ewatercycle_logo.png"                 # Replace this with your own favicon
+  baseurl :  "https://www.ewatercycle.org/getting-started"          # Replace this with your own URL
 
 sphinx:                                              # Options passed on to the underlying sphinx-parser
   config:
@@ -21,7 +21,7 @@ sphinx:                                              # Options passed on to the 
       exclude_patterns: ["**/_*.yml", "**/*.md", "**/*.ipynb"] #exclude files which should not be accessible for live code: https://teachbooks.io/manual/features/live_code.html
     html_theme_options:
       logo:
-        text: Template                               # Replace this with your own book title
+        text: Getting Started with eWaterCycle                               # Replace this with your own book title
         image_light: TeachBooks_logo.svg             # Put your logo for the light mode here (can be the same as image_dark)
         image_dark: TeachBooks_logo_inverted.svg     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: "https://github.com/user/repo" # Add your own repo URL here
