--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -9,7 +9,10 @@ parts:
       - file: some_content/why/what.md
       - file: some_content/why/sowhat.md
 
-    - file:
+    - file: some_content/first_model_run.md
+      sections:
+      - file: some_content/first_model_run/interface.ipynb
+      - file: some_content/first_model_run/first_run.ipynb
       - file: some_content/first_model_run/generate_forcing.md
         sections:
         - file: some_content/first_model_run/forcing/caravan_forcing.ipynb
