--- a/book/_config.yml
+++ b/book/_config.yml
@@ -22,9 +22,9 @@ sphinx:                                              # Options passed on to the 
     html_theme_options:
       logo:
         text: Getting Started with eWaterCycle                               # Replace this with your own book title
-        image_light: TeachBooks_logo.svg             # Put your logo for the light mode here (can be the same as image_dark)
-        image_dark: TeachBooks_logo_inverted.svg     # Put your logo for the dark mode here (can be the same as image_light)
-      repository_url: "https://github.com/user/repo" # Add your own repo URL here
+        image_light: ewatercycle_logo.png            # Put your logo for the light mode here (can be the same as image_dark)
+        image_dark: ewatercycle_logo.png     # Put your logo for the dark mode here (can be the same as image_light)
+      repository_url: https://github.com/eWaterCycle/getting-started" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
       use_edit_page_button: true                     # Replace with false if you don't want the edit page button (i.e. if you don't user to propose changes themselves or have a private repo)
