--- a/book/_config.yml
+++ b/book/_config.yml
@@ -22,8 +22,8 @@ sphinx:                                              # Options passed on to the 
     html_theme_options:
       logo:
         text: Getting Started with eWaterCycle                               # Replace this with your own book title
-        image_light: ewatercycle_logo.png            # Put your logo for the light mode here (can be the same as image_dark)
-        image_dark: ewatercycle_logo.png     # Put your logo for the dark mode here (can be the same as image_light)
+        image_light: figures/ewatercycle_logo.png            # Put your logo for the light mode here (can be the same as image_dark)
+        image_dark: figures/ewatercycle_logo.png     # Put your logo for the dark mode here (can be the same as image_light)
       repository_url: https://github.com/eWaterCycle/getting-started" # Add your own repo URL here
       path_to_docs: "book"                           # Required for edit_page_button, should be book if you're using TeachBooks package (https://github.com/TeachBooks/TeachBooks) or the TeachBooks deploy book workflow (https://teachbooks.io/manual/external/deploy-book-workflow/README.html)
       repository_branch: "main"                      # Replace when you change the name of your published branch (required for edit_page_button)
@@ -31,6 +31,8 @@ sphinx:                                              # Options passed on to the 
       use_repository_button: true                    # Replace with false if you don't want the repository button (i.e. if you have a private repo)
       use_issues_button : true                       # Replace with false if you don't want the issues button (i.e. if you don't want to use GitHub issues or have a private repo)
       launch_buttons:
+        jupyterhub_url: https://ewatercyclegu25.ewatercycle-tud.src.surf-hosted.nl/jupyter  # server is not operational
+        notebook_interface: "jupyterlab"
         thebe: true                                  # Required for live code: https://teachbooks.io/manual/features/live_code.html
     html_show_copyright: false                       # As the copyright is included in the author field
     html_last_updated_fmt: '%B %-d, %Y'              # Adds the date of the last update to the footer
