started with the models, testing the external

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -22,9 +22,10 @@ parts:
       - file: some_content/forcing/cmip_historic.ipynb
       - file: some_content/forcing/cmip_future.ipynb
       - file: some_content/forcing/manual_forcing.ipynb
+
     - file: some_content/different_models.md
       sections:
-        - file: some_content/models/hbv.ipynb
+        - external: https://github.com/eWaterCycle/ewatercycle-hbv/blob/main/docs/example_model_run_HBV_camels_catchment_ERA5_forcing.ipynb
         - file: some_content/models/pcrglobwb.ipynb
         - file: some_content/models/wflow.ipynb
 
