--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -26,7 +26,7 @@ parts:
     - file: some_content/different_models.md
       sections:
         - external: https://github.com/eWaterCycle/ewatercycle-hbv/blob/main/docs/example_model_run_HBV_camels_catchment_ERA5_forcing.ipynb
-        - file: some_content/models/pcrglobwb.ipynb
+        - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
         - file: some_content/models/wflow.ipynb
 
 
