--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -25,10 +25,10 @@ parts:
 
     - file: some_content/different_models.md
       sections:
-#      - file: some_content/models/external.md
+      - file: some_content/models/external.md
       - external: https://github.com/eWaterCycle/ewatercycle-hbv/blob/main/docs/example_model_run_HBV_camels_catchment_ERA5_forcing.ipynb
-      - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
-#      - file: some_content/models/wflow.ipynb
+#      - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
+      - file: some_content/models/wflow.ipynb
 
     - file: some_content/workflows.md
       sections:
