--- a/book/_config.yml
+++ b/book/_config.yml
@@ -31,7 +31,7 @@ sphinx:                                              # Options passed on to the 
       use_repository_button: true                    # Replace with false if you don't want the repository button (i.e. if you have a private repo)
       use_issues_button : true                       # Replace with false if you don't want the issues button (i.e. if you don't want to use GitHub issues or have a private repo)
       launch_buttons:
-        jupyterhub_url: https://ewatercyclegu25.ewatercycle-tud.src.surf-hosted.nl/jupyter  # server is not operational
+        jupyterhub_url: https://ewatercycle2526.ewatercycle-tud.src.surf-hosted.nl/jupyter  # server is not operational
         notebook_interface: "jupyterlab"
         thebe: true                                  # Required for live code: https://teachbooks.io/manual/features/live_code.html
     html_show_copyright: false                       # As the copyright is included in the author field
