update to PCRGlobWB and HBV models

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -25,8 +25,14 @@ parts:
 
     - file: some_content/different_models.md
       sections:
-      - external: https://github.com/eWaterCycle/ewatercycle-hbv/blob/main/docs/example_model_run_HBV_camels_catchment_ERA5_forcing.ipynb
-      - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
+      - file: some_content/models/hbv.md
+        sections:
+        - external: https://github.com/eWaterCycle/projects/blob/main/book/tutorials_examples/1_HBV_Caravan_ERA5/example_model_run_HBV.ipynb
+        - external: https://github.com/eWaterCycle/ewatercycle-hbv/blob/main/docs/example_model_run_HBV_camels_catchment_ERA5_forcing.ipynb
+      - file: some_content/models/pcr.md
+        sections:
+        - external: https://github.com/eWaterCycle/projects/blob/main/book/tutorials_examples/2_HBV_PCRGlobWB_ERA5/example_model_run_pcrglobwb.ipynb
+        - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
       - file: some_content/models/wflow.ipynb
 
     - file: some_content/workflows.md
@@ -44,6 +50,8 @@ parts:
       - file: some_content/workflows/comparisons.md
         sections:
           - file: some_content/workflows/comparisons/1_forcing_multiple_models.ipynb
+            sections:
+              - external: https://github.com/eWaterCycle/projects/blob/main/book/tutorials_examples/2_HBV_PCRGlobWB_ERA5/example_model_run_pcrglobwb.ipynb
           - file: some_content/workflows/comparisons/1_model_multiple_forcings.ipynb
 
       - file: some_content/workflows/model_coupling.md
