--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -33,7 +33,10 @@ parts:
         sections:
         - external: https://github.com/eWaterCycle/projects/blob/main/book/tutorials_examples/2_HBV_PCRGlobWB_ERA5/example_model_run_pcrglobwb.ipynb
         - external: https://github.com/eWaterCycle/ewatercycle-pcrglobwb/blob/main/docs/Irrigation.ipynb
-      - file: some_content/models/wflow.ipynb
+      - file: some_content/models/wflow.md
+        sections:
+        - external: https://github.com/eWaterCycle/ewatercycle-wflowjl/blob/main/docs/demo.ipynb
+        - external: https://github.com/eWaterCycle/ewatercycle-wflow/blob/main/docs/model.ipynb
 
     - file: some_content/workflows.md
       sections:
